TestCases/LLVMTests/SyntaxErrorTests/tests/test28.c
int main() {
int x = 9;

(x + 3) = 98721;

&x = 6562;
return 0;
}
